<resources>
    <string name="title_activity_test_toolbar">TestToolbar</string>
    <string name="app_name">AndroidFinal</string>

    <!-- LIVING ROOM STRINGS by Chris Billings -->

    <!-- Main Screen Strings, Buttons -->
    <string name="livingHeader">Living Room</string>
    <string name="backButton">Back</string>
    <string name="addButton">Add</string>
    <string name="removeButton">Remove</string>
    <string name="snackbarMsg">You have %1$d connectable devices in this room</string>
    <string name="toastMsg">Device Type is: %1$s</string>

    <!-- Add Dialog Strings -->
    <string name="editHint">Name of Device</string>
    <string name="okayButton">Okay</string>
    <string name="cancelButton">Cancel</string>

    <!-- Array of Strings for the Spinner in add button dialog. Strings for items need to be separated in order for Conditional logic if switched to french. -->
    <string name="array1">On/Off Lamp</string>
    <string name="array2">Dimmer Light</string>
    <string name="array3">Coloured Dimmer Light</string>
    <string name="array4">Blinds</string>
    <string name="array5">TV</string>

    <string-array name="LivingTypes">
        <item>@string/array1</item>
        <item>@string/array2</item>
        <item>@string/array3</item>
        <item>@string/array4</item>
        <item>@string/array5</item>
    </string-array>

    <string name="tvEnt">Enter</string>

    <!-- Help Header String -->
    <string name="menu_help">
        This is our Smart Home App! \n\n You can connect wirelessly to \n all your compatible home devices!
        \n\n Use the Menu Bar to select which Room you \n would like. Home, Living, Kitchen or Garage.
    </string>

    <!-- Help Body Text -->
    <string name="living_help">From the Living Room press Add to name \n your new device as well as select what \n type of functionality it will have by \n Scrolling through the options. \n\n
        Selecting your device will allow you \nto change the various settings. \n\n Our Smart System memorizes \n your last known settings! \n Upgrading to a new Lamp? \n Remove an old entry at any time.
        \n\n When you are done Press Back to \n return to your list of devices. \n\n by Chris Billings Version:1.0
    </string>

    <!-- End of Living Room Strings -->



    <!-- Start of Kitchen Strings -->


    <string name="text_kitchen_main">Kitchen App</string>
    <string name="button_control_light_add">Add</string>
    <string name="button_control_light_remove">Remove</string>
    <string name="button_control_light">Light Controls</string>
    <string name="button_control_microwave">Microwave Controls</string>
    <string name="button_control_fridge">Fridge Controls</string>
    <string name="button_control_stove">Stove Controls</string>
    <string name="text_kitchen_lights">Kitchen Lights</string>
    <string name="text_kitchen_microwave">Microwave</string>
    <string name="text_kitchen_add_name">Item Name: </string>
    <string name="percentage">"0%"</string>

    <string name="item_selection_1">Light</string>
    <string name="item_selection_2">Microwave</string>
    <string name="item_selection_3">Stove</string>
    <string name="item_selection_4">Fridge</string>
    <string name="item_selection_5">Freezer</string>

    <string-array name="kitchen_item_selection_list">
        <item>@string/item_selection_1</item>
        <item>@string/item_selection_2</item>
        <item>@string/item_selection_3</item>
        <item>@string/item_selection_4</item>
        <item>@string/item_selection_5</item>
    </string-array>


    <string name="kitchen_help">
        Valeriu Ionita: This is the Kitchen activity.\n
        Unfortunately it is incomplete, but it does contain buttons, fragments, and a semi-functional database\n
        Things you can do:\n
        1: Add a light, turn it off and on, and dim (the dimmer does not save preference)\n
        2: Add a microwave, with a semi-functional countdown (no save preference)\n
        3: Navigate to a couple of fragments using buttons and listview\n
        4: Added items are saved to the database\n
    </string>
    <!-- End of Kitchen Strings -->


    <!-- House Activity Strings by Bryan Flood-->

    <string name="garage">"Garage"</string>
    <string name="houseTemperature">"House Temperature"</string>
    <string name="weather">"Weather"</string>
    <string name="weatherLulz">"Weather!!!"</string>
    <string name="theCurrentW">"The current temperature is: "</string>
    <string name="gDoor">"Garage Door"</string>
    <string name="gLight">"Garage Light"</string>
    <string name="open">"Open"</string>
    <string name="closed">"Close"</string>
    <string name="on">"On"</string>
    <string name="off">"Off"</string>
    <string name="setTemp">"Set House Temperature:  "</string>
    <string name="degrees">"Â°C"</string>
    <string name="newMsg">"New Message"</string>
    <string name="cancel">"Cancel"</string>
    <string name="ok">"OK"</string>
    <string name="set">"SET"</string>
    <string name="scheduleText">"Schedule"</string>
    <string name="selectTime">"Select Time"</string>
    <string name="selectTemp">"Select Temperature"</string>
    <string name="add">"ADD"</string>
    <string name="currentWeather">"Current Weather"</string>
    <string name="minTemp">"Minimum Temperature"</string>
    <string name="maxTemp">"Maximum Temperature"</string>
    <string name="gLightOn">"Garage Light Turned On!"</string>
    <string name="houseTemp">"HouseTemp"</string>
    <string name="validTemp">"Enter a valid temperature \nbetween 16Â°C and 24Â°C"</string>
    <string name="deleteEntry">"Delete this entry?"</string>
    <string name="yes">"YES?"</string>
    <string name="no">"NO"</string>
    <string name="min">"Min: "</string>
    <string name="max">"Max: "</string>
    <string name="cTemp">"Current Temp: "</string>
    <string name="shorts">"Shorts weather! High five!"</string>
    <string name="sweater">"Bring a sweater just in case!"</string>
    <string name="jacket">"It's not freezing, but wear a jacket!"</string>
    <string name="parka">"Bundle up! It's cold out!"</string>

    <string name="weatherHelp">
        "- Click OK to see the current temperature, and the projected min and max
        \n- A snackbar will also appear recommending what to wear based on the current temperature
        \n\n by Bryan Flood Version: 1.0
        "
    </string>

    <string name="houseHelp">
        "-	Set house temperature with text input (between 16-24) and click SET
        \n- To add a scheduled temperature, choose a time and a temperature and click ADD
        \n- You can delete a scheduled item by clicking on it and, when prompted, click YES
        \n\n by Bryan Flood Version: 1.0"

    </string>

    <string name="garageHelp">
        "- Clicking OPEN will open the garage door and display the opened door, and will also automatically turn on the garage light if it not already on
        \n- Clicking CLOSE will close the garage door and display the closed door
        \n- Clicking ON will turn on the garage light
        \n- Clicking OFF will turn off the garage light
        \n- A full, red progress bar indicates that the door is open and the light is on
        \n- Half a bar indicates that one is open or on
        \n- An empty bar indicates the door is closed and the light is off
        \n\n by Bryan Flood Version: 1.0"
    </string>

    <string name="homeHomehelp">\n\n by Bryan Flood Version: 1.0</string>

    <string-array name="temperature_array">
        <item>"--"</item>
        <item>"16"</item>
        <item>"17"</item>
        <item>"18"</item>
        <item>"19"</item>
        <item>"20</item>
        <item>"21"</item>
        <item>"22"</item>
        <item>"23"</item>
        <item>"24"</item>
    </string-array>

    <string-array name="time_array">
        <item>"--"</item>
        <item>"00:00"</item>
        <item>"01:00"</item>
        <item>"02:00"</item>
        <item>"03:00"</item>
        <item>"04:00"</item>
        <item>"05:00"</item>
        <item>"06:00"</item>
        <item>"07:00"</item>
        <item>"08:00"</item>
        <item>"09:00"</item>
        <item>"10:00"</item>
        <item>"11:00"</item>
        <item>"12:00"</item>
        <item>"13:00"</item>
        <item>"14:00"</item>
        <item>"15:00"</item>
        <item>"16:00"</item>
        <item>"17:00"</item>
        <item>"18:00"</item>
        <item>"19:00"</item>
        <item>"20:00"</item>
        <item>"21:00"</item>
        <item>"22:00"</item>
        <item>"23:00"</item>
    </string-array>

    <!-- End of House Activity Strings -->

    <!-- TODO: ADD YOUR STRINGS -->

</resources>
