<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/fragment_kitchen_lights"
    android:background="@android:color/white"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginTop="56dp"
    android:focusable="true"
    tools:context="com.example.yah.androidfinal.KitchenLights">



<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >


    <ImageButton
        android:contentDescription="@string/backButton"
        android:layout_width="40dp"
        android:layout_height="25dp"
        android:id="@+id/button_left_arrow"
        android:background="@drawable/leftarrow"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"

        />


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="30dp"
        android:textSize="10pt"
        android:text="@string/text_kitchen_lights"
        android:id="@+id/text_kitchen_lights"
        android:layout_centerHorizontal="true"
        android:layout_alignParentTop="true"
        />




    <Button
        android:text="@string/button_control_light_remove"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/button_control_light_remove"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true"
        />

    <ToggleButton
        android:text="ToggleButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/text_kitchen_lights"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="50dp"
        android:id="@+id/kitchen_light_switch" />




    <SeekBar
        android:layout_width="200dp"
        android:layout_height="15dp"
        android:layout_below="@+id/kitchen_light_switch"
        android:layout_centerHorizontal="true"
        android:background="@android:color/darker_gray"
        android:layout_marginTop="70dp"
        android:id="@+id/kitchen_light_seekBar" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/percentage"
        android:textSize="8pt"
        android:id="@+id/light_dim_percentage"
        android:layout_below="@+id/kitchen_light_seekBar"
        android:layout_centerHorizontal="true"
        />

</RelativeLayout>
</FrameLayout>
