<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    tools:context="com.example.yah.androidfinal.HouseMainActivity">

    <android.support.design.widget.AppBarLayout
        android:id="@+id/appBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay"

        >
        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            app:popupTheme="@style/AppTheme.PopupOverlay"
            />
    </android.support.design.widget.AppBarLayout>

    <!-- GARAGE BUTTON -->
    <Button
        android:id="@+id/garageButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/garage"
        android:layout_alignEnd="@+id/tempButton"
        android:layout_alignParentStart="true"
        android:layout_below="@id/appBar"
        />

    <!-- HOUSE TEMP BUTTON -->
    <Button
        android:id="@+id/tempButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/houseTemperature"
        android:layout_below="@id/garageButton"
        />

    <!-- WEATHER BUTTON -->
    <Button
        android:id="@+id/weatherButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/weather"
        android:layout_below="@id/tempButton"
        android:layout_alignEnd="@+id/tempButton"
        android:layout_alignParentStart="true"
        />
</RelativeLayout>