<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/activity_house_temp"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    tools:context="com.example.yah.androidfinal.HouseTemp">

    <android.support.design.widget.AppBarLayout
        android:id="@+id/appBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay"

        >
        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            app:popupTheme="@style/AppTheme.PopupOverlay"

            />
    </android.support.design.widget.AppBarLayout>

    <!-- MAIN TEMPERATURE, CENTERED -->
    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingLeft="16dp"
        android:paddingRight="16dp"
        android:orientation="horizontal"
        android:layout_centerHorizontal="true"
        android:id="@+id/linear1"
        android:layout_below="@id/appBar"

        >


        <!-- MAIN LARGE TEMPERATURE -->
        <TextView
            android:id="@+id/tempText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="20"
            android:textSize="30pt"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            />

        <!-- DEGREE SYMBOL FOR LARGE TEMP -->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/degrees"
            android:textSize="30pt"
            />
    </LinearLayout>

    <!-- Linear Layout to hold 3 items @id/linear1 -->
    <LinearLayout
        android:id="@+id/linear2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="16dp"
        android:paddingRight="16dp"
        android:orientation="horizontal"
        android:layout_below="@+id/linear1"
        android:layout_centerHorizontal="true"
        android:focusable="true"
        android:focusableInTouchMode="true">

        <!-- SET TEMP TEXT -->
        <TextView
            android:id="@+id/setTempMain"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:text="@string/setTemp"
            />

        <!-- SET TEMP EDITTEXT -->
        <EditText
            android:id="@+id/tempEditText"
            android:layout_width="100px"
            android:layout_height="wrap_content"
            android:singleLine="true"
            />

        <!-- SHOW C AFTER EDITTEXT -->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/degrees"
            />

        <!-- SET BUTTON -->
        <Button
            android:id="@+id/setButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/set"
            />
    </LinearLayout>

    <!-- SCHEDULE TEXT -->
    <TextView
        android:id="@+id/schedule"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/scheduleText"
        android:layout_below="@+id/linear2"
        android:layout_centerHorizontal="true"
        android:textSize="10pt"
        android:textStyle="bold"
        android:paddingTop="50dp"
        />

    <!-- Time -->
    <LinearLayout
        android:id="@+id/setTime"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="16dp"
        android:paddingRight="16dp"
        android:orientation="horizontal"
        android:layout_below="@+id/schedule"
        >
        <!-- SELECT TIME -->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/selectTime"
            />

        <!-- TIME SPINNER -->
        <Spinner
            android:id="@+id/timeSpinner"
            android:layout_width="350px"
            android:layout_height="wrap_content"
            />
    </LinearLayout>

    <!-- Schedule -->
    <LinearLayout
        android:id="@+id/setSchedule"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="16dp"
        android:paddingRight="16dp"
        android:orientation="horizontal"
        android:layout_below="@+id/setTime"
        >

        <!-- SELECT TEMP TEXT -->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/selectTemp"
            />

        <!-- TEMP SPINNER -->
        <Spinner
            android:id="@+id/tempSpinner"
            android:layout_width="200px"
            android:layout_height="wrap_content"
            />

        <!-- DEGREE TEXT -->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/degrees"
            />

        <!-- SET BUTTON -->
        <Button
            android:id="@+id/setScheduleButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/add"
            />
    </LinearLayout>

    <!-- LISTVIEW FOR DISPLAYING DATABASE ENTRIES -->
    <ListView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/temp_data_listview"
        android:layout_below="@+id/setSchedule"
        />
</RelativeLayout>
