<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/content_weather_forecast"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.example.yah.androidfinal.Weather"
    tools:showIn="@layout/activity_weather">

    <android.support.design.widget.AppBarLayout
        android:id="@+id/appBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay"

        >
        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            app:popupTheme="@style/AppTheme.PopupOverlay"

            />
    </android.support.design.widget.AppBarLayout>

    <!-- WEATHER IMAGE -->
    <ImageView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:minWidth="200dp"
        android:minHeight="200dp"
        android:id="@+id/currentWeatherImage"
        android:layout_alignParentStart="true"
        android:layout_below="@id/appBar"
        />

    <!-- CURRENT WEATHER TEXT -->
    <TextView
        android:text="@string/currentWeather"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/currentWeather"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/currentWeatherImage"
        />

    <!-- MIN TEMP TEXT -->
    <TextView
        android:text="@string/minTemp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/minimumTemperature"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/currentWeather"
        />

    <!-- MAX TEMP TEXT -->
    <TextView
        android:text="@string/maxTemp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/maximumTemperature"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/minimumTemperature"
        />

    <!-- PROGRESS BAR -->
    <ProgressBar
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="invisible"
        android:id="@+id/progressBar"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/maximumTemperature"
        style="?android:attr/progressBarStyleHorizontal"
        />
</RelativeLayout>

